syntax = "proto3";
package shah_proto;

import "src/proto/playmat.proto";
import "src/proto/card.proto";

message ShahrazadAction {
    oneof action {
        DrawBottom draw_bottom = 1;
        DrawTop draw_top = 2;
        CardState card_state = 3;
        CardZone card_zone = 4;
        Shuffle shuffle = 5;
        ZoneImport zone_import = 6;
        DeckImport deck_import = 7;
        SetPlayer set_player = 8;
        AddPlayer add_player = 9;
        SetLife set_life = 10;
        SetCommand set_command = 11;
        ClearBoard clear_board = 12;
        DeleteToken delete_token = 13;
        Mulligan mulligan = 14;
        GameTerminated game_terminated = 15;
    }
}

message DrawBottom {
    uint32 amount = 1;
    string source = 2;
    string destination = 3;
    ShahrazadCardState state = 4;
}

message DrawTop {
    uint32 amount = 1;
    string source = 2;
    string destination = 3;
    ShahrazadCardState state = 4;
}

message CardState {
    repeated string cards = 1;
    ShahrazadCardState state = 2;
}

message CardZone {
    repeated string cards = 1;
    ShahrazadCardState state = 2;
    string destination = 3;
    int32 index = 4;
}

message Shuffle {
    string zone = 1;
    string seed = 2;
}

message ZoneImport {
    string zone = 1;
    repeated string cards = 2;
    bool token = 3;
    string player_id = 4;
}

message DeckImport {
    string deck_uri = 1;
    string player_id = 2;
}

message SetPlayer {
    string player_id = 1;
    ShahrazadPlayer player = 2;
}

message AddPlayer {
    string player_id = 1;
    ShahrazadPlayer player = 2;
}

message SetLife {
    string player_id = 1;
    int32 life = 2;
}

message SetCommand {
    string player_id = 1;
    string command_id = 2;
    int32 damage = 3;
}

message ClearBoard {
    string player_id = 1;
}

message DeleteToken {
    repeated string cards = 1;
}

message Mulligan {
    string player_id = 1;
    string seed = 2;
}

message GameTerminated {}

// message JoinGameResponse {
//     ShahrazadGame game = 1;
//     string game_id = 2;
//     string player_id = 3;
//     string player_name = 4;
//     uint32 code = 5;
//     bool reconnected = 6;
//     string hash = 7;
// }

